# data-feed-collect

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy-clickhouse.sh  deploy-openfaas-ce.sh  init_db.py  pyproject.toml
.github/workflows/: build-and-push-docker.yml
.uv/: settings.toml
config/: sources.yaml
data/: qqq_composition.csv
data_feed_collect/: __init__.py  collector.py  database.py  logging_config.py  models.py
data_feed_collect/collectors/: __init__.py  yahoo_finance.py  yfinance_option_chain.py
data_feed_collect/models/: __init__.py  instrument.py  ohlcv.py  option_chain.py
data_feed_collect/processors/: __init__.py
data_feed_collect/storage/: __init__.py  database.py  init_db.py
data_feed_collect/utils/: __init__.py  limiter.py  logging_config.py
infra/: deploy-openfaas-ce.sh  openfaas-values.yaml  postgres.yaml
k8s/: clickhouse-values.yaml  data-feed-collect-cronjob.yaml  test_pod.yaml
scripts/: insert_qqq_composition.py
tests/: test_collector.py
tests/integration/: test_database.py
