[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-feed-collect"
version = "0.1.0"
description = "A Python project for collecting and processing data feeds"
readme = "README.md"
requires-python = ">=3.10"
# Changed license from table to string format to fix deprecation warning
license = "MIT"
authors = [
    {name = "karimQuant", email = "karim.taaam@gmail.com"}
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "clickhouse-connect>=0.7.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.3.5",
    "yfinance>=0.2.57",
    "pyrate-limiter>=3.7.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy-utils>=0.41.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]

[tool.setuptools]
packages = ["data_feed_collect"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options] # Added pytest configuration
# Register custom markers
markers = [
    "integration: marks tests that require external services (like ClickHouse)"
]
# Specify test paths (optional, but good practice)
testpaths = [
    "tests"
]
# Add other pytest options here if needed, e.g.,
# addopts = "--strict-markers" # Uncomment to fail on unknown markers
# minversion = "7.0"
